--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "first-solidity-project",
+  "name": "second-solidity-project-fix",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mkhoury93/first-solidity-project.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mkhoury93/first-solidity-project/issues"
-  },
-  "homepage": "https://github.com/mkhoury93/first-solidity-project#readme",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.2.2",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.3.0",
     "solc": "^0.4.17",
-    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.4"
   }
 }
